--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,13 +36,23 @@
               {% if site.blog_name %}
               <!-- Blog -->
               <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">blog
+                <a class="nav-link" href="{{ '/blog/' | relative_url }}">ramblings
                   {%- if page.title == "blog" -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
               </li>
               {%- endif %}
+              
+               <!-- CV -->
+              <li class="nav-item inactive">
+		  <a
+		    target="_blank"
+		    class="nav-link"
+		    href="/assets/pdf/Kusha Sareen Resume.pdf"
+		    >cv</a>
+		</li>
+
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "title" -%}
