--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,13 +45,13 @@
               {%- endif %}
               
                <!-- CV -->
-              <li class="nav-item inactive">
+              <!-- <li class="nav-item inactive">
 		  <a
 		    target="_blank"
 		    class="nav-link"
 		    href="/assets/pdf/Kusha Sareen Resume.pdf"
 		    >cv</a>
-		</li>
+		</li> -->
 
 
               <!-- Other pages -->
